--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
     <div id="layer">
-      <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.
-        구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
-        <button>닫기</button>
+      <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.</p>
+      <p>구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
+      <button>닫기</button>
     </div>
 
     <div id="wrap">
@@ -278,14 +278,15 @@
       </header>
 
       <section id="main">
-        <h4 class="S_Core">모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span> <span>유성의</span> <span class="ir_pm tit2">도시미학</span></h4>
+       <h4 class="ir_pm">유성문화관광메인</h4>
         <div class="inner">
+          <h5>모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span> <span>유성의</span> <span class="ir_pm tit2">도시미학</span></h5>
           <div class="slider">
             <div class="slider_img">
               <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
             </div>
             <!-- <div class="subject">
-              <p class="S_Core">
+              <p class=">
                 <b>관광 TOP10</b>
                 유성온천문화축제
               </p>
@@ -300,37 +301,39 @@
         </div>
         <div class="main_btn">
           <div class="btn_left">
-            <button>
-              <b>과학</b>관광
-            </button>
-            <!-- <div class="btn_title1">
-              <img src="images/mvisual_btn1.png" alt="과학관광 코스 모달">
-            </div>
-            <img src="images/mvisual_btn1_bg.png" alt=""> -->
+            <button><b>과학</b>관광</button>
           </div>
           <div class="btn_right">
-            <button>
-              <b>온천</b>관광
-            </button>
-            <!-- <div class="btn_title2">
-              <img src="images/mvisual_btn2.png" alt="과학관광 코스 모달">
-            </div>
-            <img src="images/mvisual_btn2_bg.png" alt=""> -->
+            <button><b>온천</b>관광</button>
           </div>
         </div>
       </section>
       <!-- //id="main" -->
 
       <section id="pick">
-        <h4 class="title S_Core">취향<span>척척</span></h4>
+        <h4 class="title">취향<span>척척</span></h4>
         <p>여행객들을 위한 유성구만의 멋진 여행코스를 추천합니다.</p>
+        <div class="li">
+          <b></b>
+        </div>
         <div class="inner">
+          <div class="ani1"></div>
+          <div class="ani2"></div>
+          <div class="ani3"></div>  
           <div class="pick_btn">
             <ul class="tab df">
-              <li class="tab1"><a href="#"><span></span>유성!추천여행</a></li>
-              <li class="tab2"><a href="#"><span></span>도보·자전거</a></li>
-              <li class="tab3"><a href="#"><span></span>어린이관광</a></li>
-              <li class="tab4"><a href="#"><span></span>즐거운 쇼핑</a></li>
+              <li class="tab1">
+                <a href="#"><span></span>유성!추천여행</a>
+              </li>
+              <li class="tab2">
+                <a href="#"><span></span>도보·자전거</a>
+              </li>
+              <li class="tab3">
+                <a href="#"><span></span>어린이관광</a>
+              </li>
+              <li class="tab4">
+                <a href="#"><span></span>즐거운 쇼핑</a>
+              </li>
             </ul>
           </div>
           <ul class="df">
@@ -394,8 +397,12 @@
       </section>
       <!-- //id="pick" -->
       <section id="location">
-        <h4 class="title S_Core">생생<span>VR</span></h4>
+        <h4 class="title">생생<span>VR</span></h4>
         <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
+        <div class="li">
+          <b></b>
+          <a href="#" class="ir_pm">VR사이버투어</a>
+        </div>
         <div class="inner">
           <div class="vr df">
             <div class="vr_slider pr">
@@ -406,8 +413,12 @@
                 <b><span>VR사이버투어</span> 유림공원</b>
                 <p>산책하기 좋은 명품 유림공원, 추천! 언택트 관광지</p>
                 <ul class="list">
-                  <li><a href="#"><span></span>대전 유성구 어은로 27</a></li>
-                  <li><a href="#"><span></span>042-611-2445</a></li>
+                  <li>
+                    <a href="#"><span></span>대전 유성구 어은로 27</a>
+                  </li>
+                  <li>
+                    <a href="#"><span></span>042-611-2445</a>
+                  </li>
                 </ul>
               </div>
 
@@ -430,7 +441,7 @@
       <section id="quick">
         <div class="bg1"></div>
         <div class="bg2"></div>
-        <h4 class="title S_Core">요기<span>조기</span></h4>
+        <h4 class="title">요기<span>조기</span></h4>
         <p>맛있는 식도락 여행부터 맞춤관광까지 하루 더 머물고 싶은 유성구</p>
         <div class="inner">
           <div class="df">
