--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
     <a href="#main" class="skip_menu">메인화면 바로가기</a>
@@ -279,7 +280,11 @@
       <section id="main">
        <h4 class="ir_pm">유성문화관광메인</h4>
         <div class="inner">
-          <h5>모이고 떠들고 먹고 즐기는<span class="ir_pm tit1">천년온천</span> <span>유성의</span> <span class="ir_pm tit2">도시미학</span></h5>
+          <!-- <h5>모이고 떠들고 먹고 즐기는<span class="tit1">천년온천</span> <span>유성의</span> <span class="tit2">도시미학</span></h5> -->
+          <div class="title">
+            <p>모이고 떠들고 먹고 즐기는</p>
+            <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
+          </div>
           <div class="slider">
             <div class="slider_img">
               <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
