--- a/index.html
+++ b/index.html
@@ -285,10 +285,20 @@
             <p>모이고 떠들고 먹고 즐기는</p>
             <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
           </div>
-          <div class="slider">
+          <div class="slider_wrap">
+            <div id="sliderImg">
+              <ul class="slider_img">
+                <li class="visual_1"><a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1"></a></li>
+                <li class="visual_2"><a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2"></a></li>
+                <li class="visual_3"><a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3"></a></li>
+              </ul>
+            </div>
+
+           <!--  
             <div class="slider_img">
               <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
-            </div>
+            </div> 
+          -->
             <!-- <div class="subject">
               <p class=">
                 <b>관광 TOP10</b>
@@ -611,6 +621,9 @@
       </footer>
     </div>
 
+    <script src='https://code.jquery.com/jquery-1.12.1.min.js'></script>
     <script src="js/script.js"></script>
+    <script src="js/slider.js"></script>
+
   </body>
 </html>
