--- a/index.html
+++ b/index.html
@@ -12,47 +12,47 @@
 
       gtag("config", "G-GBWVDRHRTR");
     </script>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <!-- 익스호환성 / 익스를 엣지로 렌더링해라(웹문서 표시하는것을 렌더링한다라고함) -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 반응형 / 너비는 디바이스너비에 따라라, 초기화-배율(처음배율은 1배)-글자 -->
     <!-- 모바일에서 글자가 줄어드는 것을 방지함 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 검색로봇이 글어갈수 잇냐 없냐(개방할것인가 안할것인가) -->
-    <meta name="robot" content="index,nofollow">
+    <meta name="robot" content="index,nofollow" />
     <!-- 검색엔진에 설명글 /검색시에 밑에 나오는 글긔 -->
-    <meta name="description" content="유성문화관광 홈페이지입니다.">
-    <meta name="author" content="김민정">
+    <meta name="description" content="유성문화관광 홈페이지입니다." />
+    <meta name="author" content="김민정" />
     <!-- 검색 키워드 -->
-    <meta name="keyword" content="유성,유성문화관광,프로젝트">
+    <meta name="keyword" content="유성,유성문화관광,프로젝트" />
 
-    <meta property="og:title" content="유성문화관광, 프로젝트">
-    <meta property="og:description" content="김민정의 반응형 프로젝트입니다.">
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html">
-    <meta property="og:image" content="images/og_img.png">
+    <meta property="og:title" content="유성문화관광, 프로젝트" />
+    <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
+    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
+    <meta property="og:image" content="images/og_img.png" />
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="images/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <a href="#main" class="skip_menu">메인화면 바로가기</a>
@@ -60,11 +60,11 @@
     <a href="#location" class="skip_menu">생생VR 바로가기</a>
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
-    <div id="layer">
+    <!--     <div id="layer">
       <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.</p>
       <p>구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
       <button>닫기</button>
-    </div>
+    </div> -->
 
     <div id="wrap">
       <header>
@@ -99,8 +99,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천이란?</a></h3>
@@ -128,8 +128,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">관광TOP10</a></h3>
@@ -156,8 +156,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성! 추천여행</a></h3>
@@ -188,8 +188,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">유성온천문화축제</a></h3>
@@ -215,8 +215,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">숙박</a></h3>
@@ -251,8 +251,8 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!<br>과학과 온천의 관광도시 유성입니다.</p>
-                      <img src="images/gnb_obj.png" alt="">
+                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
                       <h3><a href="#">공지사항</a></h3>
@@ -272,13 +272,13 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동"></a>
+            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
           </div>
         </div>
       </header>
 
       <section id="main">
-       <h4 class="ir_pm">유성문화관광메인</h4>
+        <h4 class="ir_pm">유성문화관광메인</h4>
         <div class="inner">
           <!-- <h5>모이고 떠들고 먹고 즐기는<span class="tit1">천년온천</span> <span>유성의</span> <span class="tit2">도시미학</span></h5> -->
           <div class="title">
@@ -288,29 +288,33 @@
           <div class="slider_wrap">
             <div id="sliderImg">
               <ul class="slider_img">
-                <li class="visual_1"><a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1"></a></li>
-                <li class="visual_2"><a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2"></a></li>
-                <li class="visual_3"><a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3"></a></li>
+                <li class="visual_1">
+                  <a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1" /></a>
+                </li>
+                <li class="visual_2">
+                  <a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2" /></a>
+                </li>
+                <li class="visual_3">
+                  <a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3" /></a>
+                </li>
               </ul>
             </div>
-
-           <!--  
-            <div class="slider_img">
-              <img src="images/main_banner1.jpg" alt="메인슬라이더 베너">
-            </div> 
-          -->
-            <!-- <div class="subject">
-              <p class=">
+            <div class="subject df">
+              <p>
                 <b>관광 TOP10</b>
                 유성온천문화축제
               </p>
-              <div class="progress"></div>
-              <p>10/10</p>
-              <div class="main_prev ir_pm">이전슬라이더</div>
-              <div class="main_stop ir_pm">멈추기</div>
-              <div class="main_mext ir_pm">다음슬라이더</div>
-              <div class="main_more ir_pm">더보기</div>
-            </div> -->
+              <div class="df">
+                <div class="progress"></div>
+                <p>10/10</p>
+              </div>
+              <ul class="controls df">
+                <li class="main_prev ir_pm"><a href="#">이전슬라이더</a></li>
+                <li class="main_stop ir_pm"><a href="#">멈추기</a></li>
+                <li class="main_mext ir_pm"><a href="#">다음슬라이더</a></li>
+                <li class="main_more ir_pm"><a href="#">더보기</a></li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="main_btn">
@@ -333,7 +337,7 @@
         <div class="inner">
           <div class="ani1"></div>
           <div class="ani2"></div>
-          <div class="ani3"></div>  
+          <div class="ani3"></div>
           <div class="pick_btn">
             <ul class="tab df">
               <li class="tab1">
@@ -354,7 +358,7 @@
             <li>
               <a href="#">
                 <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="">
+                  <img src="images/mcont1_img01.jpg" alt="" />
                 </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
@@ -365,7 +369,7 @@
             <li>
               <a href="#">
                 <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="">
+                  <img src="images/mcont1_img01.jpg" alt="" />
                 </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
@@ -376,7 +380,7 @@
             <li>
               <a href="#">
                 <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="">
+                  <img src="images/mcont1_img01.jpg" alt="" />
                 </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
@@ -387,7 +391,7 @@
             <li>
               <a href="#">
                 <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="">
+                  <img src="images/mcont1_img01.jpg" alt="" />
                 </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
@@ -398,7 +402,7 @@
             <li>
               <a href="#">
                 <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="">
+                  <img src="images/mcont1_img01.jpg" alt="" />
                 </div>
                 <div class="txt">
                   <b> 우리의 추억, 대전 엑스포 </b>
@@ -421,7 +425,7 @@
           <div class="vr df">
             <div class="vr_slider pr">
               <div class="vr_img">
-                <img src="images/300_TR_202105110255503251.jpg" alt="">
+                <img src="images/300_TR_202105110255503251.jpg" alt="" />
               </div>
               <div class="txt">
                 <b><span>VR사이버투어</span> 유림공원</b>
@@ -446,7 +450,7 @@
               </ul>
             </div>
             <div class="vr_map pr">
-              <img src="images/map.png" alt="">
+              <img src="images/map.png" alt="" />
             </div>
           </div>
         </div>
@@ -467,7 +471,7 @@
             <div class="n1">
               <h5>맞춤관광</h5>
               <p>
-                유성구에서 어떤 여행을<br>
+                유성구에서 어떤 여행을<br />
                 기대하고 계시나요?
               </p>
               <div class="select_wrap df">
@@ -505,7 +509,7 @@
                   <option value="축제/행사">축제/행사</option>
                 </select>
               </div>
-             <a href="#">맞춤관광 추천받기</a>
+              <a href="#">맞춤관광 추천받기</a>
             </div>
             <ul class="n2 df">
               <li>
@@ -605,10 +609,12 @@
       <footer>
         <div class="inner">
           <div class="foot_logo">
-            <img src="images/footlogo.png" alt="">
+            <img src="images/footlogo.png" alt="" />
           </div>
           <ul class="df">
-            <li><a href="#"><b>개인정보처리방침</b></a></li>
+            <li>
+              <a href="#"><b>개인정보처리방침</b></a>
+            </li>
             <li><a href="#">저작권정책</a></li>
             <li><a href="#">사이트맵</a></li>
             <li><a href="#">찾아오시는길</a></li>
@@ -621,9 +627,8 @@
       </footer>
     </div>
 
-    <script src='https://code.jquery.com/jquery-1.12.1.min.js'></script>
+    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/slider.js"></script>
-
   </body>
 </html>
