--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
             <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
           </div>
           <div class="slider_wrap">
-            <div id="sliderImg">
-              <ul class="slider_img">
+            <div id="brandVisual">
+              <ul>
                 <li class="visual_1">
                   <a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1" /></a>
                 </li>
@@ -299,7 +299,12 @@
                 </li>
               </ul>
             </div>
-            <div class="subject df">
+            <ul id="buttonList">
+              <li class="on"></li>
+              <li></li>
+              <li></li>
+            </ul>
+            <div class="subject">
               <p>
                 <b>관광 TOP10</b>
                 유성온천문화축제
@@ -308,11 +313,11 @@
                 <div class="progress"></div>
                 <p>10/10</p>
               </div>
-              <ul class="controls df">
-                <li class="main_prev ir_pm"><a href="#">이전슬라이더</a></li>
-                <li class="main_stop ir_pm"><a href="#">멈추기</a></li>
-                <li class="main_mext ir_pm"><a href="#">다음슬라이더</a></li>
-                <li class="main_more ir_pm"><a href="#">더보기</a></li>
+              <ul class="controls">
+                <li class="prev"><a href="javascript:;"></a></li>
+                <li class="stop"><a href="javascript:;"></a></li>
+                <li class="next"><a href="javascript:;"></a></li>
+                <li class="more"><a href="javascript:;"></a></li>
               </ul>
             </div>
           </div>
