--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <a href="#location" class="skip_menu">생생VR 바로가기</a>
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
-    <!--     <div id="layer">
+    <div id="layer">
       <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.</p>
       <p>구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
       <button>닫기</button>
-    </div> -->
+    </div>
 
     <div id="wrap">
       <header>
@@ -280,7 +280,6 @@
       <section id="main">
         <h4 class="ir_pm">유성문화관광메인</h4>
         <div class="inner">
-          <!-- <h5>모이고 떠들고 먹고 즐기는<span class="tit1">천년온천</span> <span>유성의</span> <span class="tit2">도시미학</span></h5> -->
           <div class="title">
             <p>모이고 떠들고 먹고 즐기는</p>
             <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
@@ -343,79 +342,255 @@
           <div class="ani1"></div>
           <div class="ani2"></div>
           <div class="ani3"></div>
-          <div class="pick_btn">
-            <ul class="tab df">
-              <li class="tab1">
-                <a href="#"><span></span>유성!추천여행</a>
-              </li>
-              <li class="tab2">
-                <a href="#"><span></span>도보·자전거</a>
-              </li>
-              <li class="tab3">
-                <a href="#"><span></span>어린이관광</a>
-              </li>
-              <li class="tab4">
-                <a href="#"><span></span>즐거운 쇼핑</a>
-              </li>
-            </ul>
+
+          <div class="tab-wrapper">
+            <div class="pick_btn">
+              <ul class="tab df">
+                <li class="tab1">
+                  <a href="#tab-1"><span></span>유성!추천여행</a>
+                </li>
+                <li class="tab2">
+                  <a href="#tab-2"><span></span>도보·자전거</a>
+                </li>
+                <li class="tab3">
+                  <a href="#tab-3"><span></span>어린이관광</a>
+                </li>
+                <li class="tab4">
+                  <a href="#tab-4"><span></span>즐거운 쇼핑</a>
+                </li>
+              </ul>
+            </div>
+            <div class="tab-content">
+              <ul id="tab-1" class="df">
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+              <ul id="tab-2" class="df">
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 유성 족욕체험장길 </b>
+                      <p>도시생활의 피로를 해소해주는 웰빙길</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+              <ul id="tab-3" class="df">
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+              <ul id="tab-4" class="df">
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <div class="thumb">
+                      <img src="images/mcont1_img01.jpg" alt="" />
+                    </div>
+                    <div class="txt">
+                      <b> 우리의 추억, 대전 엑스포 </b>
+                      <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <ul class="df">
-            <li>
-              <a href="#">
-                <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="" />
-                </div>
-                <div class="txt">
-                  <b> 우리의 추억, 대전 엑스포 </b>
-                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="" />
-                </div>
-                <div class="txt">
-                  <b> 우리의 추억, 대전 엑스포 </b>
-                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="" />
-                </div>
-                <div class="txt">
-                  <b> 우리의 추억, 대전 엑스포 </b>
-                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="" />
-                </div>
-                <div class="txt">
-                  <b> 우리의 추억, 대전 엑스포 </b>
-                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="thumb">
-                  <img src="images/mcont1_img01.jpg" alt="" />
-                </div>
-                <div class="txt">
-                  <b> 우리의 추억, 대전 엑스포 </b>
-                  <p>빛, 우주, 과학 그리고 추억이 있는 곳</p>
-                </div>
-              </a>
-            </li>
-          </ul>
         </div>
       </section>
       <!-- //id="pick" -->
