--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <a href="#location" class="skip_menu">생생VR 바로가기</a>
     <a href="#quick" class="skip_menu">요기조기 바로가기</a>
 
-    <div id="layer">
+    <!-- <div id="layer">
       <p>이 사이트는 학습용으로 제작하였으며 유성구 문화관광과 무관합니다.</p>
-      <p>구직용 포트폴리오로 상업적 목적이 없음을 알립니다.</p>
-      <button>닫기</button>
-    </div>
+      <p>구직용 포트폴리오로 <strong>상업적 목적이 없음</strong>을 알립니다.</p>
+      <button>닫기 X</button>
+    </div> -->
 
     <div id="wrap">
       <header>
@@ -310,7 +310,7 @@
               </p>
               <div class="df">
                 <div class="progress"></div>
-                <p>10/10</p>
+                <p id="slider_num"></p>
               </div>
               <ul class="controls">
                 <li class="prev"><a href="javascript:;"></a></li>
